--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Anton&family=Baloo+Bhai+2:wght@400..800&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anton&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -172,7 +171,7 @@
       >
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <div class="gap-x d-flex">
+            <div class="gap-x d-md-flex">
               <img
                 src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
                 class="img1"
@@ -194,7 +193,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <div class="gap-x d-flex">
+            <div class="gap-x d-md-flex">
               <img
                 src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
                 class="img1"
@@ -216,7 +215,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <div class="gap-x d-flex">
+            <div class="gap-x d-md-flex">
               <img
                 src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
                 class="img1"
@@ -238,7 +237,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <div class="gap-x d-flex">
+            <div class="gap-x d-md-flex">
               <img
                 src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
                 class="img1"
@@ -260,7 +259,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <div class="gap-x d-flex">
+            <div class="gap-x d-md-flex">
               <img
                 src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
                 class="img1"
@@ -282,7 +281,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <div class="gap-x d-flex">
+            <div class="gap-x d-md-flex">
               <img
                 src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg"
                 class="img1"
@@ -290,7 +289,7 @@
               />
               <div class="text-item">
                 <h1>นายภัทรดนัย จำรัส</h1>
-                <p>
+                <p2>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                   do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                   Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -299,7 +298,7 @@
                   dolore eu fugiat nulla pariatur. Excepteur sint occaecat
                   cupidatat non proident, sunt in culpa qui officia deserunt
                   mollit anim id est laborum.
-                </p>
+                </p2>
               </div>
             </div>
           </div>
